<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kimhunz.controlapplication.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView

                android:id="@+id/section_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/space_14dp"
                android:layout_marginTop="@dimen/space_14dp"
                android:text="@string/fg_stat_status"
                android:textColor="@color/textColorSecondary"
                android:textSize="50sp" />

            <LinearLayout

                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <LinearLayout
                    android:layout_margin="@dimen/space_4dp"
                    android:background="@color/bgColorWhite"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgTemp"
                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:src="@drawable/thermometer2" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_Temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/fg_status_tv_temperature"
                            android:textColor="@color/textColorB1"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tv_Temp_stat"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColorB1"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_Temp_status"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:textSize="30sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_margin="@dimen/space_4dp"
                    android:background="@color/bgColorWhite"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:weightSum="3">

                    <ImageView
                        android:id="@+id/imgHum"

                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:src="@drawable/water" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_Hum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/fg_status_tv_humidity"
                            android:textColor="@color/textColorB1"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tv_Hum_stat"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColorB1"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView

                        android:id="@+id/tv_Hum_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:textSize="30sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_margin="@dimen/space_4dp"
                    android:background="@color/bgColorWhite"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                    <ImageView
                        android:id="@+id/imgHour"
                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:src="@drawable/clock" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">


                        <TextView
                            android:id="@+id/tv_Hour"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="@string/fg_status_tv_rotated"
                            android:textColor="@color/textColorB1"
                            android:textSize="18sp" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_Rotated_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:textSize="30sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_margin="@dimen/space_4dp"
                    android:background="@color/bgColorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_Day_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/fg_status_tv_day_stat"
                            android:textColor="@color/textColorSecondary"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/tv_Day"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColorSecondary"
                            android:textSize="36sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_Connect_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/fg_status_tv_connect"
                            android:textColor="@color/textColorSecondary"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tv_Connect"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColorSecondary"
                            android:textSize="36sp" />

                    </LinearLayout>



                </LinearLayout>


            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</LinearLayout>
