<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kimhunz.controlapplication.HomeActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView

                android:id="@+id/section_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fg_control_control"
                android:textColor="@color/textColorSecondary"
                android:textSize="50dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/lineColor1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/img_btn_TempMinus"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorTransparent"
                        android:src="@drawable/img_btn_minus_click" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTemp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fg_control_temperature"
                        android:textColor="@color/textColorB1"
                        android:textSize="25dp" />

                    <TextView
                        android:id="@+id/tvTempStat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="36.00"
                        android:textSize="25dp" />

                </LinearLayout>

                <RelativeLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/img_btn_TempPlus"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorTransparent"
                        android:src="@drawable/img_btn_plus_click" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/lineColor1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/img_btn_HumMinus"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorTransparent"
                        android:src="@drawable/img_btn_minus_click" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvHum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fg_control_humidity"
                        android:textColor="@color/textColorB1"
                        android:textSize="25dp" />

                    <TextView
                        android:id="@+id/tvHumStat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="45"
                        android:textSize="25sp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/img_btn_HumPlus"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorTransparent"
                        android:src="@drawable/img_btn_plus_click" />

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/lineColor1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/img_btn_DayMinus"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorTransparent"
                        android:src="@drawable/img_btn_minus_click" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/day"
                        android:textColor="@color/textColorB1"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/tvDayStat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="1"
                        android:textSize="25sp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/img_btn_DayPlus"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorTransparent"
                        android:src="@drawable/img_btn_plus_click" />

                </RelativeLayout>

            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/space_2dp"
                android:background="@color/lineColor1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvHour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/fg_control_hour_rotated"
                    android:textColor="@color/textColorB1"
                    android:textSize="25sp" />

                <SeekBar
                    android:id="@+id/seek_Hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/tvTemp"
                    android:layout_marginBottom="@dimen/space_5dp"
                    android:layout_marginTop="@dimen/space_10dp"
                    android:layout_weight="1"
                    android:max="7" />

                <TextView
                    android:id="@+id/tvHourStat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="1"
                    android:textSize="20sp" />

            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/space_2dp"
                android:background="@color/lineColor1" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/space_10dp"
                android:layout_marginTop="@dimen/space_10dp"
                android:background="@color/colorPrimary"
                android:text="@string/send"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
